# CarDealershipTAURI

./: README.md  package-lock.json  package.json
database/: car_dealership.mwb  create.sql
src/: App.css  App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  main.rs  models.rs  schema.rs
src-tauri/src/handlers/: cars_for_sale.rs  customer.rs  mod.rs  salesperson.rs
src/components/: CarFilter.tsx  Carousel.tsx  ConfirmationDialog.tsx  CustomerForm.tsx  Footer.tsx  Layout.tsx  Navbar.tsx  VehicleCard.tsx  VehicleForm.tsx  VehicleList.tsx
src/styles/: CarFilter.module.css  Carousel.module.css  Footer.module.css  Navbar.module.css  VehicleCard.module.css  VehicleForm.module.css  VehicleList.module.css
src/utils/: defines.ts  notification.ts  types.ts
styles/: VehicleCard.module.css  VehicleList.module.css
